# NDK_OpenglES_Tutorial

./: README.md  settings.gradle
app/: android_build_freetype.sh  build.gradle
app/src/androidTest/java/com/fly/opengles/learn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 3dlut_01.cube  3dlut_02.cube  lut_2d.glsl  lut_2d_ratio.glsl  lut_cube.glsl  nv12.yuv  nv21.yuv
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/eglhelper/: EglHelper.cpp  EglHelper.h
app/src/main/cpp/freetypeInclude/freetype/config/: ftoption.h
app/src/main/cpp/opengl/: BaseOpengl.cpp  BaseOpengl.h  EBOOpengl.cpp  EBOOpengl.h  FBOOpengl.cpp  FBOOpengl.h  MatrixTransformOpengl.cpp  MatrixTransformOpengl.h  PBOOpengl.cpp  PBOOpengl.h  RGBtoYUVOpengl.cpp  RGBtoYUVOpengl.h  RectOpengl.cpp  RectOpengl.h  TextRenderOpengl.cpp  TextRenderOpengl.h  TextureMapOpengl.cpp  TextureMapOpengl.h  TriangleOpengl.cpp  TriangleOpengl.h  VBOVAOOpengl.cpp  VBOVAOOpengl.h  WaterMarkOpengl.cpp  WaterMarkOpengl.h  YUVRenderOpengl.cpp  YUVRenderOpengl.h
app/src/main/cpp/utils/: Log.h  ShaderUtils.h
app/src/main/java/com/fly/opengles/learn/: BaseGlActivity.java  DemoBean.java  (+25 more)
app/src/main/res/layout/: activity_base_gl.xml  activity_eglactivity.xml  activity_fboactivity.xml  activity_gl_matrix.xml  activity_gl_mvp_matrix.xml  activity_main.xml  activity_matrix.xml  activity_rgb_to_yuv.xml  adapter_item_demo.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+22 files in other folders)
